# email-triage-agent

./: .gitignore  Dockerfile  README.md  __init__.py  api.py  app.py  baseline.py  easy.py  environment.py  grader.py  hard.py  inference.py  llm_agent.py  medium.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py
agents/: __init__.py  baseline.py  llm_agent.py
env/: __init__.py  environment.py  models.py
grader/: __init__.py  grader.py
scripts/: inference.py  run_baseline.py
server/: __init__.py  app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
